--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"check": "biome check --write"
 	},
 	"dependencies": {
-		"express": "5.1.0"
+		"dotenv": "^17.2.1",
+		"express": "5.1.0",
+		"zod": "^4.1.5"
 	},
 	"devDependencies": {
 		"@types/express": "5.0.3",
