--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 		"check": "biome check --write"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "5.1.0",
 		"zod": "^4.1.5"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.19",
 		"@types/express": "5.0.3",
 		"@types/node": "^24.3.0",
 		"tsconfig-paths": "^4.2.0",
