--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc && tsup",
 		"start:dev": "node --import=tsx --watch src/index.ts",
 		"start:prod": "node dist/index.js",
-		"check": "biome check --write"
+		"check": "biome check --write",
+		"codegen": "graphql-codegen"
 	},
 	"dependencies": {
 		"@apollo/server": "^5.0.0",
@@ -19,15 +20,18 @@
 		"zod": "^4.1.5"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^5.0.7",
+		"@graphql-codegen/typescript": "^4.1.6",
+		"@graphql-codegen/typescript-resolvers": "^4.5.1",
+		"@graphql-tools/load-files": "^7.0.1",
+		"@graphql-tools/merge": "^9.1.1",
 		"@types/cors": "^2.8.19",
 		"@types/express": "5.0.3",
 		"@types/node": "^24.3.0",
 		"tsconfig-paths": "^4.2.0",
 		"tsup": "8.5.0",
 		"tsx": "4.20.5",
-		"typescript": "^5.9.2",
-		"@graphql-tools/load-files": "^7.0.1",
-		"@graphql-tools/merge": "^9.1.1"
+		"typescript": "^5.9.2"
 	},
 	"tsup": {
 		"entry": [
