Add transcription service and resolvers with GraphQL integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@shared/*": ["./src/shared/*"],
+			"@services/*": ["./src/services/*"],
+			"@resolvers/*": ["./src/resolvers/*"],
 			"@/*": ["./src/*"]
 		}
 	},
