--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 NODE_ENV=development 
 PORT=8080          
 CORS_ORIGIN=http://localhost:5173
+
+S3_ENDPOINT=http://localhost:9000
+S3_ACCESS_KEY_ID=minioadmin
+S3_SECRET_ACCESS_KEY=minioadmin
+S3_REGION=us-east-1
